fixed profile loading not centered

--- a/front/src/style/Profile.css
+++ b/front/src/style/Profile.css
@@ -1,5 +1,6 @@
 .profile-loading {
-	margin: auto;
+	display: flex;
+	justify-content: center;
 }
 
 .profile-container {
